--- a/server/package.json
+++ b/server/package.json
@@ -28,19 +28,20 @@
     "body-parser": "^1.15.2",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "crypto": "0.0.3",
     "dotenv": "^5.0.1",
     "dotenv-safe": "^4.0.4",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "http-server": "^0.11.1",
+    "moment": "^2.22.2",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.5",
     "nodemon": "^1.11.0",
     "qs": "^6.3.0",
     "request": "^2.76.0",
-    "twilio": "^3.17.0",
-    "cors": "^2.8.4"
+    "twilio": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.4",
