--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "server": "node .",
     "http-server": "http-server -a localhost -p 8100 -c-l ./app",
     "test": "npm-run-all -p -r server http-server",
-    "start": "npm-run-all -p -r server http-server"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -36,7 +36,7 @@
     "express-session": "^1.14.1",
     "http-server": "^0.11.1",
     "mongodb": "^2.2.11",
-    "mongoose": "^4.6.5",
+    "mongoose": "^5.1.2",
     "nodemon": "^1.11.0",
     "qs": "^6.3.0",
     "request": "^2.76.0",
