--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/contacts": "^4.7.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/date-picker": "^4.7.0",
+    "@ionic-native/onesignal": "^4.8.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "^4.7.0",
     "@ionic/pro": "1.0.20",
@@ -42,6 +43,7 @@
     "ionicons": "3.0.0",
     "moment": "^2.22.2",
     "ngx-country-picker": "^1.3.0",
+    "onesignal-cordova-plugin": "^2.4.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -60,7 +62,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-contacts": {}
+      "cordova-plugin-contacts": {},
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "android",
