--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
+    "cordova-browser": "~5.0.3",
     "cordova-ios": "4.5.4",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-datepicker": "^0.9.3",
@@ -43,11 +44,12 @@
     "ionicons": "3.0.0",
     "moment": "^2.22.2",
     "ngx-country-picker": "^1.3.0",
+    "ngx-filter-pipe": "^2.1.0",
+    "ngx-order-pipe": "^2.0.1",
     "onesignal-cordova-plugin": "^2.4.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26",
-    "cordova-browser": "~5.0.3"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.10",
