--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.3",
     "cordova-ios": "4.5.4",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-datepicker": "^0.9.3",
@@ -67,7 +68,8 @@
     },
     "platforms": [
       "android",
-      "ios"
+      "ios",
+      "browser"
     ]
   }
 }
